syntax = "proto3";
package sixprotocol.nftoracle;
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/thesixnetwork/six-protocol/x/nftoracle/types";

message BindedSignerParams {
  string actor_address = 1;
  google.protobuf.Timestamp expired_at = 2
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}

message BindedSigner {
  string ownerAddress = 1;
  repeated BindedSignerParams signers = 2;
  uint64 actorCount = 3;
}
